<resources>
    <string name="app_name">E-commerce</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Products</string>
    <string name="dashboard">Dashboard</string>
    <string name="label">Label</string>
    <string name="profile">Profile</string>
    <string name="kategori_veya_urun_ara">Kategori veya ürün ara</string>
    <string name="sırala">Sırala</string>
    <string name="filtre">Filtre</string>
    <string name="kategoriler">Kategoriler</string>
    <string name="outdoor">Outdoor</string>
    <string name="kozmatik">Kozmatik</string>
    <string name="spor">Spor</string>
    <string name="teknoloji">Teknoloji</string>
    <string name="ev_dekorasyon">Ev dekorasyon</string>
    <string name="yasam">Yaşam</string>
    <string name="filtrele">Filtrele</string>
    <string name="kadin_giyim">Kadın Giyim</string>
    <string name="erkek_giyim">erkek giyim</string>
    <string name="mucevher">Mücevher</string>
    <string name="hesabina_giris_yap">Hesabına Giriş Yap</string>
    <string name="demo_hizligeliyo_com">demo@hizligeliyo.com</string>
    <string name="password">******</string>
    <string name="sifremi_unuttum">Şifremi unuttum</string>
    <string name="giris_yap">Giriş yap</string>
    <string name="hesabin_yok_mu">Hesabın yok mu?</string>
    <string name="kaydol">Kaydol</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="label_fragment">Label Fragment</string>
</resources>