<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/productsFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/products"
        app:iconTint="@color/bottom_navigation_icon_color" />

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"
        app:iconTint="@color/bottom_navigation_icon_color" />

    <item
        android:id="@+id/labelFragment"
        android:icon="@drawable/ic_label"
        android:title="@string/label"
        app:iconTint="@color/bottom_navigation_icon_color" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:iconTint="@color/bottom_navigation_icon_color" />
</menu>