<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_close"
            app:tint="@color/Primary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingEnd="24dp"
            android:text="@string/kategoriler"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor" />

        <TextView
            android:id="@+id/tvMensClothing"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/titillium_web_semibold"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/erkek_giyim"
            android:textColor="@color/Primary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="@color/dividerColor" />

        <TextView
            android:id="@+id/tvWomensClothing"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/titillium_web_semibold"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/kadin_giyim"
            android:textColor="@color/Primary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="@color/dividerColor" />

        <TextView
            android:id="@+id/tvJewelery"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/titillium_web_semibold"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/mucevher"
            android:textColor="@color/Primary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="@color/dividerColor" />

        <TextView
            android:id="@+id/tvTElectronics"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/titillium_web_semibold"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/teknoloji"
            android:textColor="@color/Primary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="@color/dividerColor" />

        <TextView
            android:id="@+id/tvHomeDecoration"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/titillium_web_semibold"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/ev_dekorasyon"
            android:textColor="@color/Primary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="@color/dividerColor" />

        <TextView
            android:id="@+id/tvLife"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/titillium_web_semibold"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/yasam"
            android:textColor="@color/Primary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="@color/dividerColor" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFilter"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/titillium_web_semibold"
        android:gravity="center"
        android:text="@string/filtrele"
        android:textColor="@color/white"
        app:backgroundTint="@color/yellow"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>