<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/app_name"
            android:padding="16dp"
            android:src="@drawable/ic_back"
            app:tint="@color/PrimaryDark" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/viewColorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader">

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/viewColorLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llHeader">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/company_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/titillium_web_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/hesabina_giris_yap"
                android:textColor="@color/Primary"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/background_input"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:hint="@string/demo_hizligeliyo_com"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:textColor="@color/Primary"
                android:textColorHint="@color/Primary"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/background_input"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:textColor="@color/Primary"
                android:textColorHint="@color/Primary"
                android:textCursorDrawable="@null"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="36dp"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/sifremi_unuttum"
                android:textColor="@color/Primary"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="36dp"
                android:backgroundTint="@color/blue2"
                android:fontFamily="@font/titillium_web_semibold"
                android:gravity="center"
                android:text="@string/giris_yap"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/hesabin_yok_mu"
                    android:textColor="@color/Primary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/kaydol"
                    android:textColor="@color/blue2"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/viewColorLayout"
        layout="@layout/view_color_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>