<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.ProductsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/cardViewSearch"
                app:layout_constraintStart_toStartOf="@id/cardViewSearch"
                app:layout_constraintTop_toTopOf="@id/cardViewSearch">

                <ImageView
                    android:id="@+id/imgSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_search"
                    app:tint="@color/searchIconColor" />

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/titillium_web_semibold"
                    android:hint="@string/kategori_veya_urun_ara"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/searchTextColor"
                    android:textColorHint="@color/searchTextColor"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </LinearLayout>

            <include
                layout="@layout/view_color_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llSearch" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewSearch">

        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_sort"
                    app:tint="@color/gray" />

                <TextView
                    android:id="@+id/tvSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_semibold"
                    android:paddingStart="8dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/sırala"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/viewVertical"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/cardViewActions" />

            <LinearLayout
                android:id="@+id/llFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_filter"
                    app:tint="@color/gray" />

                <TextView
                    android:id="@+id/tvFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_semibold"
                    android:paddingStart="8dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/filtre"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="0dp"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewActions" />

</androidx.constraintlayout.widget.ConstraintLayout>